--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/fragments/footer.jspf=UTF-8
 encoding//WebContent/WEB-INF/fragments/header.jspf=UTF-8
